crates/hir-ty/tests/snapshots/jls_invocations__bad_arguments_arity_mismatch.snap
---
source: crates/hir-ty/tests/jls_invocations.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    void func(String arg0, int arg1) {}

    void use() {
        func("only one");
        func("a", 1, 2);
    }
}

method use(): void
  @6:13..6:23 '"only one"': wrong-argument-count: Method 'func()' cannot be applied to given types
    -> @6:13..6:23 '"only one"': required: String, int
    -> @6:13..6:23 '"only one"': found: String
    -> @6:13..6:23 '"only one"': reason: actual and formal argument lists differ in length
  @7:13..7:22 '"a", 1, 2': wrong-argument-count: Method 'func()' cannot be applied to given types
    -> @7:13..7:22 '"a", 1, 2': required: String, int
    -> @7:13..7:22 '"a", 1, 2': found: String, int, int
    -> @7:13..7:22 '"a", 1, 2': reason: actual and formal argument lists differ in length
