crates/hir-ty/tests/snapshots/jls_invocations__bad_arguments_exact_example.snap
---
source: crates/hir-ty/tests/jls_invocations.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    void func(String arg0, int arg1) {}

    void use() {
        int i = 0;
        func(i, "string");
    }
}

method use(): void
  @7:13..7:14 'i': wrong-argument-count: Method 'func()' cannot be applied to given types
    -> @7:13..7:14 'i': required: String, int
    -> @7:13..7:14 'i': found: int, String
    -> @7:13..7:14 'i': reason: 'int' cannot be converted to 'String'
  @7:16..7:24 '"string"': incompatible-types: Incompatible types. Found: 'String', required: 'int'
    -> @7:16..7:24 '"string"': required: int
    -> @7:16..7:24 '"string"': found: String
