crates/hir-ty/tests/snapshots/jls_invocations__bad_arguments_nested.snap
---
source: crates/hir-ty/tests/jls_invocations.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

import java.util.List;

class Body {
    void take(List<String> xs) {}

    void pick(int i) {}

    void use() {
        take(pick("nope"));
    }
}

method use(): void
  @10:18..10:24 '"nope"': wrong-argument-count: Method 'pick()' cannot be applied to given types
    -> @10:18..10:24 '"nope"': required: int
    -> @10:18..10:24 '"nope"': found: String
    -> @10:18..10:24 '"nope"': reason: 'String' cannot be converted to 'int'
  @10:8..10:12 'take': wrong-argument-count: Method 'take()' cannot be applied to given types
    -> @10:8..10:12 'take': required: List<String>
    -> @10:8..10:12 'take': found: <poly>
