crates/hir-ty/tests/snapshots/jls_invocations__bad_arguments_only_one.snap
---
source: crates/hir-ty/tests/jls_invocations.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    void func(String arg0, int arg1) {}

    void use() {
        func("ok", "bad");
    }
}

method use(): void
  @6:19..6:24 '"bad"': wrong-argument-count: Method 'func()' cannot be applied to given types
    -> @6:19..6:24 '"bad"': required: String, int
    -> @6:19..6:24 '"bad"': found: String, String
    -> @6:19..6:24 '"bad"': reason: 'String' cannot be converted to 'int'
