crates/hir-ty/tests/snapshots/jls_invocations__bad_arguments_second_of_three.snap
---
source: crates/hir-ty/tests/jls_invocations.rs
expression: out
---
FILE /src/com/example/Body.java:
package com.example;

class Body {
    void func(String a, String b, int c) {}

    void use() {
        func("x", 42, 1);
    }
}

method use(): void
  @6:18..6:20 '42': wrong-argument-count: Method 'func()' cannot be applied to given types
    -> @6:18..6:20 '42': required: String, String, int
    -> @6:18..6:20 '42': found: String, int, int
    -> @6:18..6:20 '42': reason: 'int' cannot be converted to 'String'
